--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
         <img src="{% static 'images/113.png' %}" alt="" class="h-25">
     </div>
 
-    <div class="flex p-5 bg-white/20 rounded-2xl gap-7 w-sm hover:scale-105 delay-500 ease-in-out">
+    <div class="flex p-5 bg-sky-300 rounded-2xl gap-7 w-sm hover:scale-105 delay-500 ease-in-out">
 
         <div class="flex flex-col text-black justify-between bg-opicity-0">
             <img src="{{icon_url}}" alt="" class="bg-opicity-0">
